[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gridlink-monitor"
version = "0.1.0"
description = "Wasteland Protocol Gridlink: a BOINC log-to-grid health monitor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gridlink = "gridlink.main:run"
